--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -6843,7 +6843,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	month = jan,
 	year = {2017},
 	note = {Fumiko and Toshio Motoya, founders of the APA Group and defenders of Japan’s wartime conduct, provoked threats of a boycott over a book promoted at their chain.},
-	keywords = {APA Group, China, Hotels and Travel Lodgings, International Relations, Japan, Motoya, Fumiko, Motoya, Toshio, Nanjing Massacre, World War II (1939-45)}
+	keywords = {Japan, China, International Relations, APA Group, Hotels and Travel Lodgings, Motoya, Fumiko, Motoya, Toshio, Nanjing Massacre, World War II (1939-45)}
 }
 
 @article{benedictus_invasion_2016,
@@ -6860,7 +6860,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	month = nov,
 	year = {2016},
 	note = {Governments all over the world are manipulating social media for their own ends. That’s where the digital footsoldiers come in – smearing opponents, spreading disinformation and posting fake texts for ‘pocket money’},
-	keywords = {China, Digital media, Internet, Media, Russia, Social media, Technology, Twitter, UK news},
+	keywords = {China, UK news, Internet, Technology, Media, Digital media, Russia, Twitter, Social media},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\2AFF6W6R\\troll-armies-social-media-trump-russian.html:text/html}
 }
 
@@ -6930,7 +6930,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	month = jun,
 	year = {2013},
 	note = {Fistfights broke out between ultranationalist Japanese shouting anti-Korean slogans and counterprotesters on the streets of Tokyo, where public violence is rare.},
-	keywords = {Fackler, Martin, Japan, Police, South Korea, Tokyo (Japan)}
+	keywords = {Japan, South Korea, Fackler, Martin, Police, Tokyo (Japan)}
 }
 
 @misc{sankei_digital_inc_eng._2017,
@@ -6991,7 +6991,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	month = may,
 	year = {2019},
 	note = {Rising ad dollars from Japan has bolstered the company’s total revenue},
-	keywords = {Advertising, Apps, Culture, FACEBOOK INC-CLASS A, Infrastructure, Japan, Smartphone, Social Media, technology, Tokyo, TWITTER INC},
+	keywords = {Japan, Social Media, Advertising, Culture, Apps, FACEBOOK INC-CLASS A, Infrastructure, Smartphone, technology, Tokyo, TWITTER INC},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\IH42IGTC\\how-twitter-became-ubiquitous-in-japan.html:text/html}
 }
 
@@ -7097,7 +7097,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	month = apr,
 	year = {2005},
 	note = {Mass demonstrations in Beijing against Japan turn unruly and protesters try to storm Japanese ambassador's residence before riot police break up confrontation; estimated 10,000 demonstrators join march calling for boycott of Japanese goods, making it one of largest protest events authorized by government in years, but gatherings at embassy and ambassador's residence seem to be unauthorized; Japan's vice foreign minister makes official protest against violence (M)},
-	keywords = {Beijing (china), Boycotts, China, Demonstrations and Riots, Foreign Service, Japan}
+	keywords = {Japan, China, Demonstrations and Riots, Beijing (china), Boycotts, Foreign Service}
 }
 
 @misc{furuya_eng._2015,
@@ -7125,4 +7125,61 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	year = {2019},
 	note = {Definition of ideology - A system of ideas and ideals, especially one which forms the basis of economic or political theory and policy., The},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\BIQE4EIY\\ideology.html:text/html}
+}
+
+@article{beckett_paso_2019,
+	chapter = {US news},
+	title = {El {Paso} shooting: 21-year-old suspect in custody as officials investigate possible hate crime},
+	issn = {0261-3077},
+	shorttitle = {El {Paso} shooting},
+	url = {https://www.theguardian.com/us-news/2019/aug/03/el-paso-shooting-21-year-old-suspect-in-custody-as-officials-investigate-possible-hate},
+	abstract = {Officials investigating whether suspect wrote a ‘manifesto’ ahead of mass shooting that left at least 20 people dead and two dozen injured},
+	language = {en-GB},
+	urldate = {2019-08-04},
+	journal = {The Guardian},
+	author = {Beckett, Lois and Levin, Sam},
+	month = aug,
+	year = {2019},
+	note = {Officials investigating whether suspect wrote a ‘manifesto’ ahead of mass shooting that left at least 20 people dead and two dozen injured},
+	keywords = {El Paso, El Paso shooting, US news, World news},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\5X5G2MR2\\el-paso-shooting-21-year-old-suspect-in-custody-as-officials-investigate-possible-hate.html:text/html}
+}
+
+@misc{befu_symbols_2002,
+	title = {Symbols of nationalism and {Nihonjinron}},
+	url = {https://www.taylorfrancis.com/},
+	abstract = {In 1947 Kiku to Katana, the Japanese translation of The Chrysanthemum and the Sword by Ruth Benedict (1946), was published in Japan. It became an instant},
+	language = {en},
+	urldate = {2019-08-04},
+	journal = {Ideology and Practice in Modern Japan},
+	author = {Befu, Harumi},
+	month = sep,
+	year = {2002},
+	doi = {10.4324/9780203035283-10},
+	note = {In 1947 Kiku to Katana, the Japanese translation of The
+Chrysanthemum and the Sword by Ruth Benedict (1946), was
+published in Japan. It became an instant},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\B5H2Q2CB\\9780203035283-10.html:text/html}
+}
+
+@misc{h._slater_social_2012,
+	title = {Social {Media}, {Information} and {Political} {Activism} in {Japan}'s 3.11 {Crisis}},
+	url = {https://apjjf.org/2012/10/24/David-H.-Slater/3762/article.html},
+	urldate = {2019-08-10},
+	journal = {Asia-Pacific Journal},
+	author = {H. Slater, David and Nishimura, Keiko and Kindstrand, Love},
+	month = jun,
+	year = {2012},
+	file = {Social Media, Information and Political Activism in Japan’s 3.11 Crisis３１１ | The Asia-Pacific Journal\: Japan Focus:C\:\\Users\\stevi\\Juris-M\\storage\\NCW5PU9W\\article.html:text/html}
+}
+
+@misc{mic_communications_2017,
+	title = {Communications {Usage} {Trend} {Survey} in 2016 {Compiled}},
+	url = {http://www.soumu.go.jp/johotsusintokei/tsusin_riyou/data/eng_tsusin_riyou02_2016.pdf},
+	urldate = {2019-08-10},
+	publisher = {Ministry of Internal Affairs and Communications},
+	author = {{MIC}},
+	month = jul,
+	year = {2017},
+	file = {eng_tsusin_riyou02_2016.pdf:C\:\\Users\\stevi\\Juris-M\\storage\\6PK4MCY2\\eng_tsusin_riyou02_2016.pdf:application/pdf}
 }
