--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -7183,3 +7183,175 @@ published in Japan. It became an instant},
 	year = {2017},
 	file = {eng_tsusin_riyou02_2016.pdf:C\:\\Users\\stevi\\Juris-M\\storage\\6PK4MCY2\\eng_tsusin_riyou02_2016.pdf:application/pdf}
 }
+
+@book{fukuyama_end_1992,
+	address = {New York : Toronto : New York},
+	title = {The end of history and the last man},
+	isbn = {978-0-02-910975-5},
+	publisher = {Free Press ; Maxwell Macmillan Canada ; Maxwell Macmillan International},
+	author = {Fukuyama, Francis},
+	year = {1992},
+	keywords = {1945-1989, History, Imaginary histories, Philosophy, World politics}
+}
+
+@article{castells_new_2008,
+	title = {The {New} {Public} {Sphere}: {Global} {Civil} {Society}, {Communication} {Networks}, and {Global} {Governance}},
+	volume = {616},
+	issn = {0002-7162, 1552-3349},
+	shorttitle = {The {New} {Public} {Sphere}},
+	url = {http://journals.sagepub.com/doi/10.1177/0002716207311877},
+	doi = {10.1177/0002716207311877},
+	language = {en},
+	number = {1},
+	urldate = {2019-08-10},
+	journal = {The ANNALS of the American Academy of Political and Social Science},
+	author = {Castells, Manuel},
+	month = mar,
+	year = {2008},
+	pages = {78--93},
+	file = {Castells - 2008 - The New Public Sphere Global Civil Society, Commu.pdf:C\:\\Users\\stevi\\Juris-M\\storage\\796WNB5M\\Castells - 2008 - The New Public Sphere Global Civil Society, Commu.pdf:application/pdf}
+}
+
+@article{otmazgin_tail_2011,
+	title = {A {Tail} that {Wags} the {Dog}? {Cultural} {Industry} and {Cultural} {Policy} in {Japan} and {South} {Korea}},
+	volume = {13},
+	issn = {1387-6988, 1572-5448},
+	shorttitle = {A {Tail} that {Wags} the {Dog}?},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/13876988.2011.565916},
+	doi = {10.1080/13876988.2011.565916},
+	language = {en},
+	number = {3},
+	urldate = {2019-08-11},
+	journal = {Journal of Comparative Policy Analysis: Research and Practice},
+	author = {Otmazgin, Nissim},
+	month = jun,
+	year = {2011},
+	pages = {307--325}
+}
+
+@book{rosenbaum_manga_2015,
+	address = {London},
+	series = {Routledge contemporary japan series},
+	title = {Manga and the representation of {Japanese} history},
+	isbn = {978-1-138-85740-7},
+	language = {eng},
+	number = {44},
+	publisher = {Routledge},
+	editor = {Rosenbaum, Roman},
+	month = mar,
+	year = {2015},
+	note = {OCLC: 935857171},
+	annote = {"This edited collection explores how graphic art and in particular Japanese manga represent Japanese history"-- "This edited collection explores how graphic art and in particular Japanese manga represent Japanese history. The articles explore the representation of history in manga from disciplines that include such diverse fields as literary studies, politics, history, cultural studies, linguistics, narratology, and semiotics. Despite this diversity of approaches all academics from these respective fields of study agree that manga pose a peculiarly contemporary appeal that transcends the limitation imposed by traditional approaches to the study and teaching of history. The representation of history via manga in Japan has a long and controversial historiographical dimension. Thereby manga and by extension graphic art in Japanese culture has become one of the world's most powerful modes of expressing contemporary historical verisimilitude. The strategy of combining the narrative elements of writing with graphic art, the extensive narrative story-manga and its Western equivalent of the graphic novel, reflects the relatively new soft power of 'global' media, which have the potential to display history in previously unimagined ways. Boundaries of space and time in manga become as permeable as societies and cultures across the world. Each of the articles in this book investigates the authorship of history by looking at various different attempts to render Japanese history through the popular cultural media of the story-manga. As Carol Gluck, Tessa Morris-Suzuki, Susan Napier and others have shown, it has never been easy to encapsulate the complex narrative of emperor-based cyclical Japanese historical periods. The contributors to this volume elaborate how manga and by extension graphic art rewrites, reinvents and re-imagines the historicity and dialectic of bygone epochs in postwar/contemporary Japan. "--}
+}
+
+@article{sakamoto_will_2008,
+	title = {"{Will} you go to war? {Or} will you stop being {Japanese}?" {Nationalism} and {History} in {Kobayashi} {Yoshinori}'s {Sensoron} {\textbar} {The} {Asia}-{Pacific} {Journal}: {Japan} {Focus}},
+	volume = {1},
+	url = {https://apjjf.org/-Rumi-SAKAMOTO/2632/article.html},
+	number = {6},
+	urldate = {2019-08-11},
+	journal = {The Asia-Pacific Journal},
+	author = {Sakamoto, Rumi},
+	month = jan,
+	year = {2008},
+	file = {"Will you go to war? Or will you stop being Japanese?" Nationalism and History in Kobayashi Yoshinori's Sensoron | The Asia-Pacific Journal\: Japan Focus:C\:\\Users\\stevi\\Juris-M\\storage\\PGWDC4K8\\article.html:text/html}
+}
+
+@article{talbot_year_2002,
+	chapter = {Magazine},
+	title = {The {Year} in {Ideas}; {Pokémon} {Hegemon}},
+	issn = {0362-4331},
+	url = {https://www.nytimes.com/2002/12/15/magazine/the-year-in-ideas-pokemon-hegemon.html},
+	abstract = {Review of year's notable ideas notes Japan's emergence as cultural superpower--exporter of fashions, trends, gizmos, buzz and values; notes influence of Japanese-made cartoons, and their many product spinoffs; Japanese manufacturers rule growing market for home video games; photos (S)},
+	language = {en-US},
+	urldate = {2019-08-11},
+	journal = {The New York Times},
+	author = {Talbot, Margaret},
+	month = dec,
+	year = {2002},
+	note = {Review of year's notable ideas notes Japan's emergence as cultural superpower--exporter of fashions, trends, gizmos, buzz and values; notes influence of Japanese-made cartoons, and their many product spinoffs; Japanese manufacturers rule growing market for home video games; photos (S)},
+	keywords = {Animated Films, Computer and Video Games, Culture, ENTERTAINMENT, Japan, MOTION PICTURES, POKEMON (CARTOON CHARACTERS)}
+}
+
+@book{macwilliams_japanese_2008,
+	address = {Abingdon},
+	series = {"{An} {East} {Gate} book."},
+	title = {Japanese visual culture: explorations in the world of manga and anime},
+	isbn = {978-0-7656-1602-9 978-0-7656-1601-2},
+	shorttitle = {Japanese visual culture},
+	language = {eng},
+	publisher = {Routledge},
+	editor = {Macwilliams, Mark Wheeler},
+	month = apr,
+	year = {2008},
+	note = {OCLC: 931964651},
+	annote = {Literaturverz. S. [311] - 334}
+}
+
+@book{adorno_culture_2001,
+	address = {London ; New York},
+	series = {Routledge classics},
+	title = {The culture industry: selected essays on mass culture},
+	isbn = {978-0-415-25534-9 978-0-415-25380-2},
+	shorttitle = {The culture industry},
+	publisher = {Routledge},
+	author = {Adorno, Theodor W. and Bernstein, J. M.},
+	year = {2001},
+	keywords = {1950-, 20th century, Civilization, Modern, History, Mass media, Mass society, Popular culture, Postmodernism, Social aspects History},
+	annote = {On the fetish character in music and the regression of listening -- The schema of mass culture -- Culture industry reconsidered -- Culture and administration -- Freudian theory and the pattern of fascist propaganda -- How to look at television -- Transparencies on film -- Free time -- Resignation}
+}
+
+@article{penney_nationalism_2009,
+	title = {Nationalism and {Anti}-{Americanism} in {Japan} – {Manga} {Wars}, {Aso}, {Tamogami}, and {Progressive} {Alternatives} {\textbar} {The} {Asia}-{Pacific} {Journal}: {Japan} {Focus}},
+	volume = {7},
+	url = {https://apjjf.org/-Matthew-Penney/3116/article.html},
+	number = {17},
+	urldate = {2019-08-11},
+	journal = {The Asia-Pacific Journal},
+	author = {Penney, Matthew},
+	month = apr,
+	year = {2009},
+	file = {Nationalism and Anti-Americanism in Japan – Manga Wars, Aso, Tamogami, and Progressive Alternatives | The Asia-Pacific Journal\: Japan Focus:C\:\\Users\\stevi\\Juris-M\\storage\\3S7TXHHN\\article.html:text/html}
+}
+
+@article{tamaki_repackaging_2019,
+	title = {Repackaging national identity: {Cool} {Japan} and the resilience of {Japanese} identity narratives},
+	volume = {27},
+	issn = {0218-5377, 1750-7812},
+	shorttitle = {Repackaging national identity},
+	url = {https://www.tandfonline.com/doi/full/10.1080/02185377.2019.1594323},
+	doi = {10.1080/02185377.2019.1594323},
+	language = {en},
+	number = {1},
+	urldate = {2019-08-11},
+	journal = {Asian Journal of Political Science},
+	author = {Tamaki, Taku},
+	month = jan,
+	year = {2019},
+	pages = {108--126}
+}
+
+@book{mcluhan_understanding_1994,
+	address = {Cambridge, Mass},
+	edition = {1st MIT Press ed},
+	title = {Understanding media: the extensions of man},
+	isbn = {978-0-262-63159-4},
+	shorttitle = {Understanding media},
+	publisher = {MIT Press},
+	author = {McLuhan, Marshall},
+	year = {1994},
+	keywords = {Communication, Communication and technology, Mass media}
+}
+
+@misc{beauchamp_expert_2016,
+	title = {An expert on the {European} far right explains the growing influence of anti-immigrant politics},
+	url = {https://www.vox.com/2016/5/31/11722994/european-far-right-cas-mudde},
+	abstract = {"Everyone and everything that's non-native — that is, alien — is threatening."},
+	urldate = {2019-08-12},
+	journal = {Vox},
+	author = {Beauchamp, Zack},
+	month = may,
+	year = {2016},
+	note = {"Everyone and everything that's non-native — that is, alien — is threatening."},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\9NXLH4UU\\european-far-right-cas-mudde.html:text/html}
+}
