--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -7355,3 +7355,20 @@ published in Japan. It became an instant},
 	note = {"Everyone and everything that's non-native — that is, alien — is threatening."},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\9NXLH4UU\\european-far-right-cas-mudde.html:text/html}
 }
+
+@article{baker_we_2019,
+	chapter = {News},
+	title = {‘{We} the people’: the battle to define populism},
+	issn = {0261-3077},
+	shorttitle = {‘{We} the people’},
+	url = {https://www.theguardian.com/news/2019/jan/10/we-the-people-the-battle-to-define-populism},
+	abstract = {The long read: The noisy dispute over the meaning of populism is more than just an academic squabble – it’s a crucial argument about what we expect from democracy},
+	language = {en-GB},
+	urldate = {2019-08-12},
+	journal = {The Guardian},
+	author = {Baker, Peter C.},
+	month = jan,
+	year = {2019},
+	note = {The long read: The noisy dispute over the meaning of populism is more than just an academic squabble – it’s a crucial argument about what we expect from democracy},
+	keywords = {Antisemitism, Bernie Sanders, Brexit, Donald Trump, Politics, UK news, US news}
+}
