--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -7141,7 +7141,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	month = aug,
 	year = {2019},
 	note = {Officials investigating whether suspect wrote a ‘manifesto’ ahead of mass shooting that left at least 20 people dead and two dozen injured},
-	keywords = {El Paso, El Paso shooting, US news, World news},
+	keywords = {World news, US news, El Paso, El Paso shooting},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\5X5G2MR2\\el-paso-shooting-21-year-old-suspect-in-custody-as-officials-investigate-possible-hate.html:text/html}
 }
 
@@ -7191,7 +7191,7 @@ published in Japan. It became an instant},
 	publisher = {Free Press ; Maxwell Macmillan Canada ; Maxwell Macmillan International},
 	author = {Fukuyama, Francis},
 	year = {1992},
-	keywords = {1945-1989, History, Imaginary histories, Philosophy, World politics}
+	keywords = {History, Philosophy, 1945-1989, Imaginary histories, World politics}
 }
 
 @article{castells_new_2008,
@@ -7270,7 +7270,7 @@ published in Japan. It became an instant},
 	month = dec,
 	year = {2002},
 	note = {Review of year's notable ideas notes Japan's emergence as cultural superpower--exporter of fashions, trends, gizmos, buzz and values; notes influence of Japanese-made cartoons, and their many product spinoffs; Japanese manufacturers rule growing market for home video games; photos (S)},
-	keywords = {Animated Films, Computer and Video Games, Culture, ENTERTAINMENT, Japan, MOTION PICTURES, POKEMON (CARTOON CHARACTERS)}
+	keywords = {Japan, Culture, Animated Films, Computer and Video Games, ENTERTAINMENT, MOTION PICTURES, POKEMON (CARTOON CHARACTERS)}
 }
 
 @book{macwilliams_japanese_2008,
@@ -7297,7 +7297,7 @@ published in Japan. It became an instant},
 	publisher = {Routledge},
 	author = {Adorno, Theodor W. and Bernstein, J. M.},
 	year = {2001},
-	keywords = {1950-, 20th century, Civilization, Modern, History, Mass media, Mass society, Popular culture, Postmodernism, Social aspects History},
+	keywords = {History, 20th century, Popular culture, Mass media, 1950-, Civilization, Modern, Mass society, Postmodernism, Social aspects History},
 	annote = {On the fetish character in music and the regression of listening -- The schema of mass culture -- Culture industry reconsidered -- Culture and administration -- Freudian theory and the pattern of fascist propaganda -- How to look at television -- Transparencies on film -- Free time -- Resignation}
 }
 
@@ -7340,7 +7340,7 @@ published in Japan. It became an instant},
 	publisher = {MIT Press},
 	author = {McLuhan, Marshall},
 	year = {1994},
-	keywords = {Communication, Communication and technology, Mass media}
+	keywords = {Communication, Mass media, Communication and technology}
 }
 
 @misc{beauchamp_expert_2016,
@@ -7370,5 +7370,86 @@ published in Japan. It became an instant},
 	month = jan,
 	year = {2019},
 	note = {The long read: The noisy dispute over the meaning of populism is more than just an academic squabble – it’s a crucial argument about what we expect from democracy},
-	keywords = {Antisemitism, Bernie Sanders, Brexit, Donald Trump, Politics, UK news, US news}
+	keywords = {Politics, UK news, Donald Trump, US news, Antisemitism, Bernie Sanders, Brexit}
+}
+
+@misc{abe_house_2016,
+	title = {House of {Councilors} conference proceedings information 190th session of the {Diet} {Budget} {Committee} {No}. 17},
+	url = {http://kokkai.ndl.go.jp/SENTAKU/sangiin/190/0014/19003180014017a.html},
+	language = {ja},
+	urldate = {2019-08-14},
+	journal = {kokkai.ndl.go.jp},
+	author = {Abe, Shinzō},
+	month = mar,
+	year = {2016},
+	file = {参議院会議録情報　第１９０回国会　予算委員会　第１７号:C\:\\Users\\stevi\\Juris-M\\storage\\AAM2FXI5\\19003180014017a.html:text/html}
+}
+
+@misc{osakaichibanyane_isnt_2017,
+	title = {Isn't kachōfūgetsu setsugetsuka keibu on {Wikipedia} strange? {They} edit very anti-{Japanese}. {However}, they have administrative rights on {Wikipedia} and it seems they are making it their own. kachōfūgetsu setsugetsuka keibu...},
+	url = {https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q10183667130?fr=pc_ogp_other},
+	abstract = {Wikipediaにいる花蝶風月雪月花警部っておかしくないですか？凄く反日に編集するのですが。でもWikipedia内で権限があるらしくWikipediaを私物化しています。花蝶風月雪月花警部によるWikipedia私物化を止めさせ...},
+	language = {ja},
+	urldate = {2019-08-14},
+	journal = {Yahoo!知恵袋},
+	author = {osakaichibanyane},
+	month = dec,
+	year = {2017},
+	note = {Wikipediaにいる花蝶風月雪月花警部っておかしくないですか？凄く反日に編集するのですが。でもWikipedia内で権限があるらしくWikipediaを私物化しています。花蝶風月雪月花警部によるWikipedia私物化を止めさせるにはどうすればいいのでしょうか？},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\IBCNLS9F\\q10183667130.html:text/html}
+}
+
+@misc{anonymous_cant_2017,
+	title = {Can't we do anything about the unfair editing by the {Zainichi} {Korean} kachōfūgetsu setsugetsuka keibu, on {Wikipedia}?},
+	url = {https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q13171578898?fr=pc_ogp_other},
+	abstract = {Wikipediaの花蝶風月雪月花警部という在日朝鮮人の偏ったな編集はどうにかならないんですか？ 無理ですね。Wikipediaは管理者絶対。その警部という人はヤバイから相手にしないようにするか、エンペディアなどの別Wikiで主張され...},
+	language = {ja},
+	urldate = {2019-08-14},
+	journal = {Yahoo!知恵袋},
+	author = {{Anonymous}},
+	month = mar,
+	year = {2017},
+	note = {Wikipediaの花蝶風月雪月花警部という在日朝鮮人の偏ったな編集はどうにかならないんですか？},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\Z242NWRA\\q13171578898.html:text/html}
+}
+
+@misc{anonymous_japanesea_2017,
+	title = {{JapaneseA}, who is active on {Wikipedia}, has written on their user page that they are {Japanese}, but what they do looks like they are {Korean}...},
+	url = {https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q10171294600?fr=pc_ogp_other},
+	abstract = {Wikipediaで活動している「JapaneseA」さんは日本人であるようなことがユーザーページに書いてありますが、やってることをみると朝鮮人のようなんですがどういうことなんでしょうか？ 2ちゃんねるウィキペディア...},
+	language = {ja},
+	urldate = {2019-08-14},
+	journal = {Yahoo!知恵袋},
+	author = {{Anonymous}},
+	month = mar,
+	year = {2017},
+	note = {Wikipediaで活動している「JapaneseA」さんは日本人であるようなことがユーザーページに書いてありますが、やってることをみると朝鮮人のようなんですがどういうことなんでしょうか？},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\N99KIEPE\\q10171294600.html:text/html}
+}
+
+@misc{anonymous_chichiii_2018,
+	title = {Chichiii - 2ちゃんねるウィキペディアスレまとめwiki},
+	url = {https://jawp2ch.miraheze.org/wiki/Chichiii},
+	language = {ja},
+	urldate = {2019-08-14},
+	author = {{Anonymous}},
+	year = {2018},
+	file = {Chichiii - 2ちゃんねるウィキペディアスレまとめwiki:C\:\\Users\\stevi\\Juris-M\\storage\\459QDECB\\Chichiii.html:text/html}
+}
+
+@misc{anonymous_wikipedia:_2019,
+	title = {Wikipedia:ユーザーボックス},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	shorttitle = {Wikipedia},
+	url = {https://ja.wikipedia.org/w/index.php?title=Wikipedia:%E3%83%A6%E3%83%BC%E3%82%B6%E3%83%BC%E3%83%9C%E3%83%83%E3%82%AF%E3%82%B9&oldid=71866759},
+	abstract = {ユーザーボックス (userbox) は、ウィキペディアの利用者ページで使用される、利用者についての簡単なお知らせの入った色付の小さなボックスです。その目的は記事を書く際にウィキペディアン同士がより効果的に協働作業ができるよう手助けすることにあります。
+ユーザーボックスはウィキペディアンの言語能力を表すバベルが発展する形で登場しました。},
+	language = {ja},
+	urldate = {2019-08-14},
+	journal = {Wikipedia},
+	author = {{Anonymous}},
+	month = mar,
+	year = {2019},
+	note = {Page Version ID: 71866759},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\SJ3MX2LB\\index.html:text/html}
 }
