final final commit

--- a/graduate_thesis_stevie_poppe_final.tex
+++ b/graduate_thesis_stevie_poppe_final.tex
@@ -230,7 +230,7 @@ voorname politici. Om dat aan te duiden, wordt er in hun
 respectievelijke talen gesproken over de Amerikaanse alt-right, Franse
 fachosphère en Japanse Netto-Uyoku (let. `Net-Rechts'), want ook in
 Japan is er sprake van een dergelijk fenomeen. Deze paper tracht dat
-globale fenomeen te conceptualiseren als cyber-nationalisme, een vorm
+globale fenomeen te conceptualiseren als cyber-nationalisme, een vorm van
 neo-nationalisme die niet enkel op het internet bestaat, maar ook door
 de kenmerken van dat medium gevormd wordt. Om de logica achter dat
 cyber-nationalisme te onthullen, baseren we ons op de theoretische
